<resources>
    <string name="app_name">Guitars</string>
    <string name="tv_correo">E-Mail</string>
    <string name="tv_pass">Password</string>
    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_guitar">Guitars</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="msg_marca">Marca</string>
    <string name="msg_modelo">Modelo</string>
    <string name="msg_precio">Precio</string>
    <string name="msg_correo">Correo</string>
    <string name="msg_telefono">Teléfono</string>
    <string name="msgGuitarAgregado">Guitarra agregada</string>
    <string name="msgFaltanDatos">Faltan datos</string>
    <string name="bt_agregar">Agregar</string>
</resources>