<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_guitar">

    <fragment
        android:id="@+id/nav_guitar"
        android:name="com.example.guitars.ui.guitar.GuitarFragment"
        android:label="@string/menu_guitar"
        tools:layout="@layout/fragment_guitar" >
        <action
            android:id="@+id/action_nav_guitar_to_addGuitarFragment"
            app:destination="@id/addGuitarFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.guitars.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.guitars.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/addGuitarFragment"
        android:name="com.example.guitars.ui.guitar.AddGuitarFragment"
        android:label="fragment_add_guitar"
        tools:layout="@layout/fragment_add_guitar" >
        <action
            android:id="@+id/action_addGuitarFragment_to_nav_guitar"
            app:destination="@id/nav_guitar" />
    </fragment>
</navigation>